Test4/version_01.cydsn/CortexM3/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 12/04/2016 23:45:22 Project: version_01, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_493\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\run_front.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\Clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\Clock_2.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\step.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\sda.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\scl.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\I2CS.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\I2CS_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\I2CS_INT.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\I2CS_PM.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\I2CS_SLAVE.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\I2CS_MASTER.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\Dir_step.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\PWM2.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\PWM2_PM.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\set_pwm.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\UpDown.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\UpDown_PM.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\UpDown_Cnt8.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\UpDown_Cnt8_PM.o"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\version_01.hex"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\version_01.elf"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\version_01.map"
Deleting file ".\version_01.cycdx"
Deleting file ".\version_01.svd"
Deleting file ".\version_01.rpt"
Deleting file ".\version_01_timing.html"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_493\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\Anders\AppData\Local\Cypress Semiconductor\PSoC Creator\4.0" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Anders\Desktop\Projekt 4. semester\E4PRJ4-Gruppe1\Test4\version_01.cydsn\version_01.cyprj" -d CY8C5868LTI-LP039 -s "C:\Users\Anders\Desktop\Projekt 4. semester\E4PRJ4-Gruppe1\Test4\version_01.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0032: warning: Clock Warning: (Clock_2's accuracy range '12 MHz +/- 1%, (11.88 MHz - 12.12 MHz)' is not within the specified tolerance range '10 MHz +/- 5%, (9.5 MHz - 10.5 MHz)'.).
 * C:\Users\Anders\Desktop\Projekt 4. semester\E4PRJ4-Gruppe1\Test4\version_01.cydsn\TopDesign\TopDesign.cysch (Instance:Clock_2)
 * C:\Users\Anders\Desktop\Projekt 4. semester\E4PRJ4-Gruppe1\Test4\version_01.cydsn\version_01.cydwr (Clock_2)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c main.c -o .\CortexM3\ARM_GCC_493\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/run_front.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c run_front.c -o .\CortexM3\ARM_GCC_493\Debug\run_front.o
run_front.c: In function 'run_front':
run_front.c:5:10: error: 'ang2' redeclared as different kind of symbol
     int8 ang2;
          ^
run_front.c:3:47: note: previous definition of 'ang2' was here
 uint8 run_front(uint8 ang, uint8 speed, uint8 ang2, uint8 speed2)
                                               ^
run_front.c:5:10: warning: variable 'ang2' set but not used [-Wunused-but-set-variable]
     int8 ang2;
          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 12/04/2016 23:45:30 ---------------
